# n0mad

./: .dockerignore  .env.example  .env.template  .flake8  .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURE_DESIGN.md  CAPABILITIES_AND_FEATURES_INVENTORY.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  CODEBASE_DISCOVERY_ANALYSIS.md  DOCUMENTATION_STRUCTURE_DESIGN.md  Dockerfile  ENHANCED_CLAUDE_EXECUTION.md  ENVIRONMENT_CONFIGURATION.md  LICENSE  MANIFEST.in  NEW_QUEUED_LOGIC.md  README.md  SLACK_INTEGRATION_ARCHITECTURE.md  SLACK_INTEGRATION_SUMMARY.md  SOLUTION_CLAUDE_CODE_IMPLEMENTATION.md  STANDALONE_INSTALL.md  STATUS_UPDATE_FIX.md  __init__.py  codebase_analysis.md  codebase_analysis_docker.md  debug_schema.py  docker-secrets.example.yml  docker_build_guide.md  execute_claude_interactive.py  force_claude_implementation.py  git_commit_analysis.md  install-global.sh  install.sh  notion_integration_analysis.md  package-lock.json  package.json  process-tasks.js  (+18 more)
.claude/: settings.json  settings.local.json
.claude/commands/tm/: learn.md
.claude/commands/tm/list/: list-tasks.md  (+2 more)
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  manual-release.yml  release.yml
.taskmaster/: CLAUDE.md  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.backup_20250804_214243.json  tasks.backup_20250804_220119.json  tasks.backup_20250804_223028.json  tasks.backup_20250804_224006.json  tasks.backup_20250804_234209.json  tasks.backup_20250804_234422.json  tasks.backup_20250804_235701.json  tasks.backup_20250805_004648.json  tasks.backup_20250805_021340.json  tasks.backup_20250805_163005.json  tasks.json
.taskmaster/tasks/backups/: tasks_20250804_103753_NOMAD-19.json.bak  tasks_20250804_110016_NOMAD-20.json.bak  tasks_20250804_130536_NOMAD-20.json.bak
clients/: claude_engine_invoker.py  notion_wrapper.py  openai_client.py
core/managers/: branch_integration_manager.py  enhanced_status_transition_manager.py  feedback_manager.py  notification_manager.py  status_transition_manager.py
core/operations/: __init__.py  command_executor.py  database_operations.py
core/processors/: multi_status_processor.py  simple_queued_processor.py
core/services/: branch_service.py  commit_message_service.py  git_commit_service.py
data/: __init__.py
data/pre-refined/: NOMAD-20.md  NOMAD-9.md
data/refined/: NOMAD-14.md  NOMAD-19.md
docs/: PACKAGE_MANAGEMENT_GUIDE.md  README.md
docs/_templates/: api-documentation-template.md  installation-guide-template.md  standard-document-template.md
docs/api/: README.md  ai-provider-apis.md  notion-api.md
docs/installation/: README.md  quick-install.md  system-requirements.md  troubleshooting-installation.md
docs/usage/: README.md  faq.md  quick-start.md
entry/: __init__.py  main.py
n0mad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
nomad_notion_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notion_developer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: performance_test.py  security_audit.py  slack_performance_benchmark.py  validate_environment.py
src/: __init__.py  claude_engine_invoker.py  command_executor.py  config.py  content_processor.py  database_operations.py  feedback_manager.py  logging_config.py  main.py  main_workflow.py  multi_queue_processor.py  multi_status_processor.py  notion_wrapper.py  openai_client.py  openrouter_client.py  performance_integration.py  performance_monitor.py  polling_scheduler.py  polling_strategies.py  provider_router.py  run.py  simple_queued_processor.py  status_transition_manager.py  task_file_manager.py  task_locking.py  task_status.py
src/clients/: __init__.py  claude_engine_invoker.py
src/core/: exceptions.py
src/core/managers/: status_transition_manager.py  task_file_manager.py
src/core/operations/: database_operations.py
src/core/processors/: branch_integrated_processor.py  content_processor.py  multi_status_processor.py  prepare_mode_processor.py  simple_queued_processor.py
src/entry/: __init__.py  main.py
src/tasks/: __init__.py
src/tasks/pre-refined/: NOMAD-14.md  NOMAD-19.md  NOMAD-29.md  NOMAD-8.md  NOMAD-9.md
src/tasks/refined/: NOMAD-14.md  NOMAD-19.md  NOMAD-20.md  NOMAD-25.md  NOMAD-28.md  NOMAD-30.md  NOMAD-8.md  NOMAD-9.md
src/tasks/summary/: NOMAD-30.md  NOMAD-31.md
src/tasks/tasks/: NOMAD-14.json  NOMAD-19.json  NOMAD-20.json  NOMAD-22.json  NOMAD-28.json  NOMAD-29.json  NOMAD-30.json  NOMAD-31.json
src/utils/: __init__.py  branch_config.py  checkbox_utils.py  env_security.py  global_config.py  logging_config.py  model_parser.py  performance_monitor.py  provider_router.py  retry_decorator.py  security_validator.py  singleton_config.py  slack_config.py  task_locking.py  task_status.py  typed_config.py
tasks/pre-refined/: NOMAD-14.md  NOMAD-19.md  NOMAD-22.md  NOMAD-25.md  NOMAD-28.md  NOMAD-29.md  NOMAD-30.md  NOMAD-31.md  NOMAD-8.md  NOMAD-9.md
tasks/refined/: NOMAD-22.md  NOMAD-28.md  NOMAD-29.md  NOMAD-30.md  NOMAD-31.md  NOMAD-9.md
tasks/summary/: NOMAD-30.md
tasks/tasks/: NOMAD-25.json  NOMAD-28.json  NOMAD-29.json  NOMAD-31.json  NOMAD-9.json
tests/: __init__.py  test_branch_integration.py  test_commit_message_service.py  test_config.py  test_config_polling.py  test_config_slack.py  test_database_operations.py  test_enhanced_status_transition_manager.py  test_model_parser.py  test_model_parser_simple.py  test_openai_client_integration.py  test_openrouter_client.py  test_performance_monitoring.py  test_polling_strategies.py  test_security_validator.py  test_simple_queued.py  test_slack_integration.py  test_status_transitions.py  test_summary_generation.py  test_task_name_validation.py  test_task_validation_service.py
utils/: env_security.py  file_operations.py  global_config.py  model_parser.py  performance_integration.py  performance_monitor.py  provider_router.py  security_validator.py  task_locking.py
(+34 files in other folders)
