[project]
name = "nomad"
version = "0.1.0"
description = "Notion task refinement automation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "notion-client>=2.2.1",
    "openai>=1.35.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
nomad = "src.main:main"
