[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n0mad"
version = "0.0.2"
description = "N0MAD: Notion Orchestrated Management & Autonomous Developer - AI-powered Notion automation with autonomous development capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "N0MAD Development Team"},
]
maintainers = [
    {name = "N0MAD Development Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["n0mad", "notion", "automation", "ai", "autonomous-developer", "task-management", "openai", "anthropic", "claude"]
requires-python = ">=3.8.1"
dependencies = [
    "aiohttp>=3.9.0",
    "notion-client>=2.2.1",
    "openai>=1.35.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.0.1",
    "pathlib2>=2.3.0;python_version<'3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
n0mad = "src.entry.main:main"
nomad = "src.entry.main:main"
nomad-config = "src.entry.main:main"

[project.urls]
Homepage = "https://github.com/ddcodepl/n0mad"
Repository = "https://github.com/ddcodepl/n0mad.git"
Documentation = "https://github.com/ddcodepl/n0mad/blob/main/README.md"
"Bug Tracker" = "https://github.com/ddcodepl/n0mad/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__", "*.log"]

[tool.black]
line-length = 160
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 160

[tool.flake8]
max-line-length = 160
ignore = ["E203", "W503", "E501", "F541"]

[tool.mypy]
python_version = "0.0.2"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
